fully finished library project

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <div class="header">
         <p class="library">library</p>
-        <button class="sign-in">Log In</button>
+        <button class="sign-in btn">Log In</button>
     </div>
     <div class="main">
         <div class="add-container">
-            <button class="add">+ Add Book</button>
+            <button class="add btn">+ Add Book</button>
         </div>
 
         <div class="overlay">
@@ -27,11 +27,9 @@
                     <label for="read">Have you read it?</label>
                     <input type="checkbox" id="read">
                 </div>
-                <button class="submit-btn">Submit</button>
+                <button class="submit-btn btn">Submit</button>
             </div>
         </div> 
-
-
         <div class="booklist"></div>
     </div>
     
